feat: profile details and crossref service
