# apps/backend/internal/domain/entities/person.go
@@ -3,11 +3,13 @@ package entities
 import "github.com/google/uuid"
 
 type Person struct {
-	Id         uuid.UUID
-	UserID     uuid.UUID
-	ORCiD      *string
-	Name       string
-	GivenName  *string
-	FamilyName *string
-	Email      string
+	Id          uuid.UUID
+	AvatarUrl   *string
+	Description *string
+	UserID      uuid.UUID
+	ORCiD       *string
+	Name        string
+	GivenName   *string
+	FamilyName  *string
+	Email       string
 }
